--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -30,6 +30,13 @@
     display:none;
 
 }
+/* menu items */
+.menu__itens{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+}
 
 /* Sección superior*/
 .superior__seccion__container{
@@ -59,6 +66,24 @@
     /* footer */
     .rodapie__container{
         justify-content: space-between;
+    }
+    /* menu contenedor de las listas*/
+    .menu__container{
+        display:flex;
+        top: 10em;
+        position: fixed;
+        bottom: 0%;
+        height: 100%;
+        width: 6em;
+        padding-right: 5px;
+    }
+    .menu__lista{ 
+        float: left;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: column;
     }
 
 }
