--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -73,6 +73,7 @@
         height: auto;
         width: 78px;
     }
+    /* menu items responsive */
     .menu__lista{ 
         display: flex;
         padding: 15px;
@@ -81,4 +82,16 @@
         gap: 33px;
     }
 
+}
+@media(max-width:1440px){
+    .menu__container{
+        width: 239px;
+        overflow: scroll;        
+    }
+    .menu__lista:nth-child(2),.menu__lista:nth-child(3),.menu__lista:nth-child(4){
+        display:flex;
+    }
+    .menu__lista{
+        height: auto;
+    }
 }
