Trabajando con el responsive de la seccón de Videos.

--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -48,6 +48,15 @@
 
 }
 
+/* Sección de Videos */
+.videos__item{
+    height: 303px;
+    width: 280px;
+}
+
+
+
+
 /* footer */
 .rodapie__container{
     display: flex;
