--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -49,11 +49,39 @@
 }
 
 /* Sección de Videos */
+
+.videos__container{
+
+    display: flex;
+    flex-wrap: wrap;
+    gap:10px;
+    
+}
+
 .videos__item{
     height: 303px;
     width: 280px;
+    flex-grow: 1;
 }
 
+.descripcion-video{
+    align-items:start;
+    display: flex;
+    margin-top:1rem;
+    flex-direction: row;
+}
+.descripcion-video img{
+    margin-right: 1rem;
+    flex-shrink: 0; /* Evita que la imagen se reduzca */    
+}
+.detalles__video{
+    flex-direction: column;
+    text-align:left;
+    }   
+
+.detalles__video h3{
+    margin-bottom: 10px;
+}
 
 
 
